--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-binaryornot==0.3.0
-chardet==2.3.0
-colorama==0.3.3
-cookiecutter==0.9.1
-docopt==0.6.2
-docx==0.2.4
-funcy==1.5
-html2text==2015.2.18
-Jinja2==2.7.3
-kitchen==1.2.1
-lxml==3.4.2
-MarkupSafe==0.23
-mock==1.0.1
-pdfminer==20140328
-Pillow==2.7.0
-py==1.4.26
-pyth==0.6.0
-PySide==1.2.2
-python-osinfo==0.2.1
-PyYAML==3.11
-scandir==1.1
-tox==1.9.0
-Unidecode==0.4.17
-virtualenv==12.0.7
+binaryornot>=0.3.0
+chardet>=2.3.0
+colorama>=0.3.3
+cookiecutter>=0.9.1
+docopt>=0.6.2
+docx>=0.2.4
+funcy>=1.5
+html2text>=2015.2.18
+Jinja2>=2.7.3
+kitchen>=1.2.1
+lxml>=3.4.2
+MarkupSafe>=0.23
+mock>=1.0.1
+pdfminer>=20140328
+Pillow>=2.7.0
+py>=1.4.26
+pyth>=0.6.0
+PySide>=1.2.2
+python-osinfo>=0.2.1
+PyYAML>=3.11
+scandir>=1.1
+tox>=1.9.0
+Unidecode>=0.4.17
+virtualenv>=12.0.7
